--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>OSTest</title>
+<link rel="manifest" href="/manifest.json" />
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  var OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "b9efe6a9-b300-4072-ac0e-61bebc4d18cb",
+    });
+  });
+</script>
+</head>
+  
+<body>
+  
 <h1>Hello</h1>
+  
+</body>
+</html>
