--- a/google.html
+++ b/google.html
@@ -16,9 +16,9 @@
     // Get API key and client ID from API Console.
     // 'scope' field specifies space-delimited list of access scopes.
     gapi.client.init({
-        'apiKey': 'YOUR_API_KEY',
+        'apiKey': 'L9B_0Ri_pzDgK5eRdNkreXLX',
         'discoveryDocs': [discoveryUrl],
-        'clientId': 'YOUR_CLIENT_ID',
+        'clientId': '668700805353-j225g18rrfabortcjeegpqmrbk2ocs3b.apps.googleusercontent.com',
         'scope': SCOPE
     }).then(function () {
       GoogleAuth = gapi.auth2.getAuthInstance();
