--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         });
 
         function askForPermission() {
-                standardInit({
+                WITBuzzInit({
                     appId: '1ea5ea27-ab3b-4196-b3e2-d85cf7c68140'
                 });
         }
