--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Web Push Notifications Test</title>
+    <title>Web Push Notifications PROD Test</title>
     <script src="https://dev.wit-software.com/a2p/rest/sdks/webpush/WITBuzzSDK.js" async=""></script>
     <script>
         window.addEventListener('load', function() {
@@ -22,7 +22,7 @@
 
 <h1>Hello</h1>
 
-<a href="#" onclick="askForPermission();">Activate Safari Push</a>
+<a href="#" onclick="askForPermission();">Activate Safari / Firefox Push</a>
 
 </body>
 </html>
