--- a/mf/index.html
+++ b/mf/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Web Push Notifications PROD Test</title>
+    <title>Web Push MF test</title>
     <script src="https://dev.wit-software.com/a2p/rest/sdks/webpush/WITBuzzSDK.js" async=""></script>
     <script>
         window.addEventListener('load', function() {
