--- a/mf/index.html
+++ b/mf/index.html
@@ -6,13 +6,15 @@
     <script>
         window.addEventListener('load', function() {
             WITBuzzInit({
-                appId: '792acbe6-18dd-40d4-8e21-d9779b8a6d71'
+                appId: '792acbe6-18dd-40d4-8e21-d9779b8a6d71',
+                workerFilePath: '/mf'
             });
         });
 
         function askForPermission() {
                 WITBuzzInit({
-                    appId: '792acbe6-18dd-40d4-8e21-d9779b8a6d71'
+                    appId: '792acbe6-18dd-40d4-8e21-d9779b8a6d71',
+                    workerFilePath: '/mf'
                 });
         }
     </script>
