--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,9 @@
                 workerFilePath: '/test'
             });
         });
-
+        
         function askForPermission() {
-                safariInit({
+                WITBuzzInit({
                     appId: '25f48ebf-53ce-4671-aff3-3d6fc1cbd0ec',
                     workerFilePath: '/test'
                 });
