--- a/test/index.html
+++ b/test/index.html
@@ -24,7 +24,7 @@
 
 <h1>Hello</h1>
 
-<a href="#" onclick="askForPermission();">Activate Safari Push</a>
+<a href="#" onclick="askForPermission();">Activate Safari / Firefox Push</a>
 
 </body>
 </html>
