--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Web Push Notifications PROD Test</title>
-    <script src="https://dev.wit-software.com/a2p/rest/sdks/webpush/WITBuzzSDK.js" async=""></script>
+    <script src="https://wit.buzz/rest/sdks/webpush/WITBuzzSDK.js" async=""></script>
     <script>
         window.addEventListener('load', function() {
             WITBuzzInit({
